My other version was better.

--- a/résumé-expanded.html
+++ b/résumé-expanded.html
@@ -47,57 +47,8 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-12">
-                <div class="section-header-underline underline-full underline-thin underline-section-full-heavy">
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-3">
-                <div class="row section-header header-underline">
-                    <div class="font-primary col-md-12 fg-primary uppercase medium">
-                        Skills
-                    </div>
-                    <div class="col-md-12">
-                        <div class="section-header-underline underline-full underline-thin underline-section">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm">
-                <!-- <div class="font-primary item-name bold job-title"> -->
-                <div class="italic fg-secondary">
-                    <ul>
-                        <li>
-                            Core: Java 7 and 8, .Net Framework 4.6, Python, OOP, Spring, Web Services, Rest API
-                        </li>
-                        <li>
-                            Database: MySQL, Postgres, Spring JDBC, Hibernate
-                        </li>
-                        <li>
-                            Testing: jUnit, Mockito
-                        </li>
-                        <li>
-                            Version Control: Git, BitBucket, GitHub
-                        </li>
-                        <li>
-                            IDE: Intellij, Netbeans, VSCode
-                        </li>
-                        <li>
-                            Server: Apache Tomcat
-                        </li>
-                        <li>
-                            Tools: Maven, Gradle, Jeckins, JIRA, BASH
-                        </li>
-                        <li>
-                            Front End: HTML, CSS, JS, jQuery, Bootstrap 3, AJAX, JSP, JSON
-                        </li>
-                        <li>
-                            Business: Agile methodology, TDD, requirements gathering, documentation, analysis
-                        </li>
-                    </ul>
-                </div>
-            </div>
+        	<div class="col-md-12 spacer">        	
+        	</div>
         </div>
         <div class="row">
             <div class="col-md-3">
@@ -291,6 +242,54 @@
 
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-3">
+                <div class="row section-header header-underline">
+                    <div class="font-primary col-md-12 fg-primary uppercase medium">
+                        Skills
+                    </div>
+                    <div class="col-md-12">
+                        <div class="section-header-underline underline-full underline-thin underline-section">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm">
+                <!-- <div class="font-primary item-name bold job-title"> -->
+                <div class="italic fg-secondary">
+                    <ul>
+                        <li>
+                            Core: Java 7 and 8, .Net Framework 4.6, Python, OOP, Spring, Web Services, Rest API
+                        </li>
+                        <li>
+                            Database: MySQL, Postgres, Spring JDBC, Hibernate
+                        </li>
+                        <li>
+                            Testing: jUnit, Mockito
+                        </li>
+                        <li>
+                            Version Control: Git, BitBucket, GitHub
+                        </li>
+                        <li>
+                            IDE: Intellij, Netbeans, VSCode
+                        </li>
+                        <li>
+                            Server: Apache Tomcat
+                        </li>
+                        <li>
+                            Tools: Maven, Gradle, Jeckins, JIRA, BASH
+                        </li>
+                        <li>
+                            Front End: HTML, CSS, JS, jQuery, Bootstrap 3, AJAX, JSP, JSON
+                        </li>
+                        <li>
+                            Business: Agile methodology, TDD, requirements gathering, documentation, analysis
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
     </div>
 </body>
 </html>
