Not much better.

--- a/résumé-expanded.html
+++ b/résumé-expanded.html
@@ -47,8 +47,57 @@
             </div>
         </div>
         <div class="row">
-        	<div class="col-md-12 spacer">        	
-        	</div>
+            <div class="col-md-12">
+                <div class="section-header-underline underline-full underline-thin underline-section-full-heavy">
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-3">
+                <div class="row section-header header-underline">
+                    <div class="font-primary col-md-12 fg-primary uppercase medium">
+                        Skills
+                    </div>
+                    <div class="col-md-12">
+                        <div class="section-header-underline underline-full underline-thin underline-section">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm">
+                <!-- <div class="font-primary item-name bold job-title"> -->
+                <div class="italic fg-secondary">
+                    <ul>
+                        <li>
+                            Core: Java 7 and 8, .Net Framework 4.6, Python, OOP, Spring, Web Services, Rest API
+                        </li>
+                        <li>
+                            Database: MySQL, Postgres, Spring JDBC, Hibernate
+                        </li>
+                        <li>
+                            Testing: jUnit, Mockito
+                        </li>
+                        <li>
+                            Version Control: Git, BitBucket, GitHub
+                        </li>
+                        <li>
+                            IDE: Intellij, Netbeans, VSCode
+                        </li>
+                        <li>
+                            Server: Apache Tomcat
+                        </li>
+                        <li>
+                            Tools: Maven, Gradle, Jeckins, JIRA, BASH
+                        </li>
+                        <li>
+                            Front End: HTML, CSS, JS, jQuery, Bootstrap 3, AJAX, JSP, JSON
+                        </li>
+                        <li>
+                            Business: Agile methodology, TDD, requirements gathering, documentation, analysis
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
         <div class="row">
             <div class="col-md-3">
@@ -93,27 +142,27 @@
                     <li>
                         Reduced Average File Load Time From 5 Minutes to 25 Seconds
                         <ul>
-		                    <li>
-		                    	Used More Efficent Data Structures
-		                    </li>
-		                </ul>
+                            <li>
+                                Used More Efficent Data Structures
+                            </li>
+                        </ul>
                     </li>
                     <li>
                         Crafted a Binary File Reader From Scratch
                         <ul>
-		                    <li>
-		                    	Minimal Resources Available Online
-		                    </li>
-		                    <li>
-		                    	No Documentation To Follow
-		                    </li>
-		                    <li>
-		                    	Told It Was Impossible
-		                    </li>
-		                    <li>
-		                    	Took Less Than A Week
-		                    </li>
-		                </ul>
+                            <li>
+                                Minimal Resources Available Online
+                            </li>
+                            <li>
+                                No Documentation To Follow
+                            </li>
+                            <li>
+                                Told It Was Impossible
+                            </li>
+                            <li>
+                                Took Less Than A Week
+                            </li>
+                        </ul>
                     </li>
                     <li>
                         Ported Java Code to Python
@@ -188,10 +237,10 @@
                 </ul>
                 <div class="row">
                     <div class="col-md-9">
-            			<div class="footer-space">
-            			</div>
-					</div>
-				</div>
+                        <div class="footer-space">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row">
@@ -228,68 +277,20 @@
                 </div>
                 <div class="row">
                     <div class="col-md-11">
-                		<div class="italic fg-secondary">
-			                <ul>
-                				<li>
-                					12 Week Coding Bootcamp
-                				</li>
-                			</ul>
-                		</div>
-                	</div>
+                        <div class="italic fg-secondary">
+                            <ul>
+                                <li>
+                                    12 Week Coding Bootcamp
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
                 <div class="footer-space">
                 </div>
 
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-3">
-                <div class="row section-header header-underline">
-                    <div class="font-primary col-md-12 fg-primary uppercase medium">
-                        Skills
-                    </div>
-                    <div class="col-md-12">
-                        <div class="section-header-underline underline-full underline-thin underline-section">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm">
-                <!-- <div class="font-primary item-name bold job-title"> -->
-                <div class="italic fg-secondary">
-                    <ul>
-                        <li>
-                            Core: Java 7 and 8, .Net Framework 4.6, Python, OOP, Spring, Web Services, Rest API
-                        </li>
-                        <li>
-                            Database: MySQL, Postgres, Spring JDBC, Hibernate
-                        </li>
-                        <li>
-                            Testing: jUnit, Mockito
-                        </li>
-                        <li>
-                            Version Control: Git, BitBucket, GitHub
-                        </li>
-                        <li>
-                            IDE: Intellij, Netbeans, VSCode
-                        </li>
-                        <li>
-                            Server: Apache Tomcat
-                        </li>
-                        <li>
-                            Tools: Maven, Gradle, Jeckins, JIRA, BASH
-                        </li>
-                        <li>
-                            Front End: HTML, CSS, JS, jQuery, Bootstrap 3, AJAX, JSP, JSON
-                        </li>
-                        <li>
-                            Business: Agile methodology, TDD, requirements gathering, documentation, analysis
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-
     </div>
 </body>
 </html>
