Might be better.

--- a/résumé-expanded.html
+++ b/résumé-expanded.html
@@ -81,21 +81,23 @@
                             Version Control: Git, BitBucket, GitHub
                         </li>
                         <li>
-                            IDE: Intellij, Netbeans, VSCode
+                            IDE: Intellij, Netbeans, VSCode, Sublime Text
                         </li>
                         <li>
                             Server: Apache Tomcat
                         </li>
                         <li>
-                            Tools: Maven, Gradle, Jeckins, JIRA, BASH
+                            Tools: Maven, Gradle, Jenkins, TravisCI, JIRA, BASH
                         </li>
                         <li>
-                            Front End: HTML, CSS, JS, jQuery, Bootstrap 3, AJAX, JSP, JSON
+                            Front End: HTML, CSS, JS, jQuery, Bootstrap 3 & 4, AJAX, JSP, Thymeleaf, JSON
                         </li>
                         <li>
                             Business: Agile methodology, TDD, requirements gathering, documentation, analysis
                         </li>
                     </ul>
+                    <div class="footer-space">
+                    </div>
                 </div>
             </div>
         </div>
@@ -113,14 +115,14 @@
             </div>
             <div class="col-sm">
                 <div class="row grey-backgroud">
-                    <div class="col-md-9">
+                    <div class="col-md-8">
                         <div class="font-primary item-name bold job-title">
                             Application Developer
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                         <div class="date-range">
-                            2018 - 2016
+                            Present - 2016
                         </div>
                     </div>
                 </div>
@@ -139,11 +141,16 @@
                     </div>
                 </div>
                 <ul>
-                    <li>
-                        Reduced Average File Load Time From 5 Minutes to 25 Seconds
+                    <li>Built new app processing sensor data into color coded maps
                         <ul>
                             <li>
-                                Used More Efficent Data Structures
+                                Improved the turnaround time from months to minutes over previous approach
+                            </li>
+                            <li>
+                                Further improved the performance from 7 minutes to 25 seconds average load time using more efficent data structures
+                            </li>
+                            <li>
+                                Wrote 100% of the tests for the application
                             </li>
                         </ul>
                     </li>
@@ -157,9 +164,6 @@
                                 No Documentation To Follow
                             </li>
                             <li>
-                                Told It Was Impossible
-                            </li>
-                            <li>
                                 Took Less Than A Week
                             </li>
                         </ul>
@@ -167,16 +171,22 @@
                     <li>
                         Ported Java Code to Python
                     </li>
+                    <li>
+                        Automated Routine Tasks
+                    </li>
+                    <li>
+                        Dramatically expaned test coverage in all areas
+                    </li>
                 </ul>
                 <div class="footer-space">
                 </div>
                 <div class="row grey-backgroud">
-                    <div class="col-md-9">
+                    <div class="col-md-8">
                         <div class="font-primary item-name bold job-title">
                             Technician
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                         <div class="date-range">
                             2016 - 2013
                         </div>
@@ -205,12 +215,12 @@
                 </div>
 
                 <div class="row grey-backgroud">
-                    <div class="col-md-9">
+                    <div class="col-md-8">
                         <div class="font-primary item-name bold job-title">
-                            Loading Dock Associate
+                            Warehouse Associate
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                         <div class="date-range">
                             2013 - 2008
                         </div>
@@ -236,7 +246,7 @@
                     </li>
                 </ul>
                 <div class="row">
-                    <div class="col-md-9">
+                    <div class="col-md-8">
                         <div class="footer-space">
                         </div>
                     </div>
@@ -257,14 +267,21 @@
             </div>
             <div class="col-sm">
                 <div class="row grey-backgroud">
-                    <div class="col-md-9">
+                    <div class="col-md-8">
                         <div class="font-primary item-name bold job-title">
                             The Software Guild
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                         <div class="date-range">
                             2016
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="employer-title font-primary inline-block italic fg-secondary">
+                            12 Week Coding Bootcamp
                         </div>
                     </div>
                 </div>
@@ -280,7 +297,16 @@
                         <div class="italic fg-secondary">
                             <ul>
                                 <li>
-                                    12 Week Coding Bootcamp
+                                    Focus on Java
+                                </li>
+                                <li>
+                                    Implemented Agile Methodology
+                                </li>
+                                <li>
+                                    Pair programming
+                                </li>
+                                <li>
+                                    Weekly code reviews and product showcases
                                 </li>
                             </ul>
                         </div>
