Corrected/reverted the expanded version.

--- a/résumé-expanded.html
+++ b/résumé-expanded.html
@@ -18,33 +18,37 @@
 </head>
 <body>
     <div class="container">
-        <div class="name-piece">
-            <div class="row">
-                <div class="my-name col-sm text-center font-weight-bold">
-                    ADAM TEGTMEIER
+        <div class="row">
+            <div class="my-name col-sm text-center font-weight-bold">
+                ADAM TEGTMEIER
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-4">
+            </div>
+            <div class="col-sm-2 col-sm-2-offset-3">
+                <div class="my-email text-center font-weight-bold sm-info">
+                    <span class="sm-icon sm-icon-mail"></span> <span class="sm-info-text">ATegtmei@gmail.com</span>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-sm-4">
+            <div class="col-sm-2">
+                <div class="my-phone-number col-sm text-center font-weight-bold sm-info">
+                    <span class="sm-icon sm-icon-phone"></span> <span class="sm-info-text">(509) 557-0668</span>
                 </div>
-                <div class="col-sm-2 col-sm-2-offset-3">
-                    <div class="my-email text-center font-weight-bold sm-info">
-                        <span class="sm-icon sm-icon-mail"></span> <span class="sm-info-text">ATegtmei@gmail.com</span>
-                    </div>
+            </div>
+            <div class="col-sm-4">
+            </div>
+            <div class="col-sm-5">
+            </div>
+            <div class="col-sm-2">
+                <div class="my-github col-sm text-center font-weight-bold sm-info">
+                    <span class="sm-icon sm-icon-github"></span> <span class="sm-info-text">github.com/ategt</span>
                 </div>
-                <div class="col-sm-2">
-                    <div class="my-phone-number col-sm text-center font-weight-bold sm-info">
-                        <span class="sm-icon sm-icon-phone"></span> <span class="sm-info-text">(509) 557-0668</span>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                </div>
-                <div class="col-sm-5">
-                </div>
-                <div class="col-sm-2">
-                    <div class="my-github col-sm text-center font-weight-bold sm-info">
-                        <span class="sm-icon sm-icon-github"></span> <span class="sm-info-text">github.com/ategt</span>
-                    </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="section-header-underline underline-full underline-thin underline-section-full-heavy">
                 </div>
             </div>
         </div>
