Added Bloated resume to list and updated index.

--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
 <p>
 	<a href="résumé-timeline.html">Timeline Résumé</a>
 </p>
+<p>
+	<a href="résumé-expanded-color.html">Color Résumé</a>
+</p>
+<p>
+	<a href="résumé-expanded-color-2.html">Bloated Résumé</a>
+</p>
 </body>
 </html>
