Added Flickr Uploadr.

--- a/résumé-expanded-color-2.html
+++ b/résumé-expanded-color-2.html
@@ -684,6 +684,54 @@
                 <div class="row grey-backgroud">
                     <div class="col-md-8">
                         <div class="font-primary item-name bold job-title">
+                            Flickr Image Uploader
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="date-range">
+                            
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="employer-title font-primary inline-block italic fg-secondary">
+                            Hashes all of the images in a folder, and then uploads the unsyncronized images to the Flickr API
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="font-primary location">                            
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-11">
+                        <div class="italic fg-secondary">
+                            <ul>
+                                <li>
+                                    Reduced the number of duplicate images uploaded dramatically
+                                </li>
+                                <li>
+                                    Tracks Successful uploads
+                                </li>
+                                <li>
+                                    Automated a routine task
+                                </li>
+                                <li>
+                                    Implemented before flickr had a photo limit
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer-space">
+                </div>
+
+                <div class="row grey-backgroud">
+                    <div class="col-md-8">
+                        <div class="font-primary item-name bold job-title">
                             Radio Commercial Identifier
                         </div>
                     </div>
@@ -721,6 +769,51 @@
                                 </li>
                                 <li>
                                 	Useful for seperating or classifing radio commercials, songs, beds, bits, and transitions
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer-space">
+                </div>
+
+                <div class="row grey-backgroud">
+                    <div class="col-md-8">
+                        <div class="font-primary item-name bold job-title">
+                            Git Analysis Suite
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="date-range">
+                            
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="employer-title font-primary inline-block italic fg-secondary">
+                            Builds assorted analytics from git repositories
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="font-primary location">                            
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-11">
+                        <div class="italic fg-secondary">
+                            <ul>
+                                <li>
+                                    Examines time spent on project
+                                </li>
+                                <li>
+                                    Tabulates commits, sorted by user
+                                </li>
+                                <li>
+                                    Allowed me to have impressive git hub activity
                                 </li>
                             </ul>
                         </div>
