Added router repair script.

--- a/résumé-expanded-color-2.html
+++ b/résumé-expanded-color-2.html
@@ -732,6 +732,28 @@
                 <div class="row grey-backgroud">
                     <div class="col-md-8">
                         <div class="font-primary item-name bold job-title">
+                            Router Repair Script
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="date-range">
+                            
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="employer-title font-primary inline-block italic fg-secondary">
+                            Occasionally, my wifi router would loose the internet and the simplest way to repair the problem was to restart the router, so I wrote a script to periodically check if I had a connection, and restart the router if the connection was ever down
+                        </div>
+                    </div>
+                </div>
+                <div class="footer-space">
+                </div>
+
+                <div class="row grey-backgroud">
+                    <div class="col-md-8">
+                        <div class="font-primary item-name bold job-title">
                             Radio Commercial Identifier
                         </div>
                     </div>
