Corrected TechHire Info.

--- a/résumé-expanded-color-2.html
+++ b/résumé-expanded-color-2.html
@@ -888,7 +888,7 @@
                                     3 Kyu - Code Wars
                                 </li>
                                 <li>
-                                    17th place (out of 90,000+ participants) - Presidential Alternative Education challenge - 2016
+                                    17th place (out of 500+ participants) - Presidential TechHire CodeSprint - 2016
                                 </li>
                             </ul>
                         </div>
