More details to something.

--- a/résumé-expanded-color-2.html
+++ b/résumé-expanded-color-2.html
@@ -577,7 +577,7 @@
                             		Identifies several types of files, not just images
                                 </li>
                                 <li>
-                                    Features 512 bit file hashing
+                                    Features SHA-512 bit file hashing
                                 </li>
                             </ul>
                         </div>
