--- a/résumé-expanded-color.html
+++ b/résumé-expanded-color.html
@@ -108,6 +108,9 @@
                         </div>
                     </div>
                 </div>
+                <div class="image-container">
+                	<div class="image-holder-1"></div>
+                </div>
             </div>
             <div class="col-sm">
                 <div class="row grey-backgroud">
