Moved the image to inside the text.

--- a/résumé-expanded-color.html
+++ b/résumé-expanded-color.html
@@ -108,8 +108,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="image-container">
-                	<div class="image-holder-1"></div>
+                <div class="image-container-0">
+                	<div class="image-holder-0"></div>
                 </div>
             </div>
             <div class="col-sm">
@@ -119,7 +119,7 @@
                             Application Developer
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 date-range-div">
                         <div class="date-range">
                             Present - 2016
                         </div>
@@ -139,6 +139,14 @@
                         </div>
                     </div>
                 </div>
+		        <div class="image-container-1">
+                	<div class="row">
+                		<div class="col-md-6"></div>
+                		<div class="col-md-6">
+        					<div class="image-holder-1"></div>
+                		</div>
+                	</div>
+        		</div>
                 <ul>
                     <li>Built new app processing sensor data into color coded maps
                         <ul>
@@ -149,7 +157,7 @@
                                 Further improved the performance from 7 minutes to 25 seconds average load time using more efficent data structures
                             </li>
                             <li>
-                                Wrote 100% of the tests for the application
+                                Wrote 100% of the tests for the application                                
                             </li>
                         </ul>
                     </li>
@@ -185,7 +193,7 @@
                             Technician
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 date-range-div">
                         <div class="date-range">
                             2016 - 2013
                         </div>
@@ -219,7 +227,7 @@
                             Warehouse Associate
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 date-range-div">
                         <div class="date-range">
                             2013 - 2008
                         </div>
@@ -271,7 +279,7 @@
                             The Software Guild
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 date-range-div">
                         <div class="date-range">
                             2016
                         </div>
