Added planes over gulf picture.

--- a/résumé-expanded-color-2.html
+++ b/résumé-expanded-color-2.html
@@ -329,6 +329,9 @@
                     </div>
                 </div>
                 <div class="row">
+                    <div class="image-container-2">
+                        <div class="image-holder-2"></div>
+                    </div>
                     <div class="col-md-12">
                         <div class="font-primary location">                            
                         </div>
