Added pictures for zombies and sudoku.

--- a/résumé-expanded-color-2.html
+++ b/résumé-expanded-color-2.html
@@ -136,6 +136,9 @@
                         </div>
                     </div>
                 </div>
+                <div class="image-container-1">
+                    <div class="image-holder-1"></div>
+                </div>
                 <ul>
                     <li>Built new app processing sensor data into color coded maps
                         <ul>
@@ -409,9 +412,12 @@
                     </div>
                 </div>
                 <div class="row">
+                    <div class="image-container-3">
+                        <div class="image-holder-3"></div>
+                    </div>
                     <div class="col-md-12">
                         <div class="employer-title font-primary inline-block italic fg-secondary">
-                        	Generates Original Sudoku Puzzles
+                            Generates Original Sudoku Puzzles
                         </div>
                     </div>
                 </div>
@@ -478,11 +484,14 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="employer-title font-primary inline-block italic fg-secondary">
-                        	A whimsical excuse to learn HTML5's canvas API
+                            A whimsical excuse to learn HTML5's canvas API
                         </div>
                     </div>
                 </div>
                 <div class="row">
+                    <div class="image-container-4">
+                        <div class="image-holder-4"></div>
+                    </div>
                     <div class="col-md-12">
                         <div class="font-primary location">                            
                         </div>
