Added a WV logo.

--- a/résumé-expanded-color-2.html
+++ b/résumé-expanded-color-2.html
@@ -126,6 +126,7 @@
                     <div class="col-md-12">
                         <div class="employer-title font-primary inline-block italic fg-secondary">
                             WinVale Services
+                            <div class="logo-0"></div>
                         </div>
                     </div>
                 </div>
